fix: z-index mobile menu

--- a/style/_style2.scss
+++ b/style/_style2.scss
@@ -270,8 +270,11 @@
     margin-left: 0;
   }
 
-  @include tablet {
+  @include mobile {
     display: none;
+  }
+
+  @include tablet {
   }
 
   &:hover {
