--- a/style/style.scss
+++ b/style/style.scss
@@ -344,7 +344,7 @@ p {
   max-width: 300px;
   height: 100vh;
   background-color: #0b1d33;
-  z-index: 99999;
+  z-index: 99999999;
   overflow: hidden;
   visibility: hidden;
   opacity: 0;
@@ -365,7 +365,7 @@ p {
     height: 100vh;
     background: #0b1d33;
     opacity: 0.8;
-    z-index: 2;
+    z-index: 9999999;
     overflow: hidden;
     visibility: hidden;
     opacity: 0;
@@ -1511,6 +1511,26 @@ p {
           color: $gray;
         }
       }
+    }
+  }
+
+  &__scroll {
+    margin-top: 50px;
+    width: 100%;
+    height: 5px;
+    border: 1px solid #999;
+    background-color: transparent;
+    position: relative;
+
+    &__bar {
+      width: 80%;
+      background-color: #999;
+      height: 100%;
+      border-radius: 4px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transition: 0.1s linear;
     }
   }
 }
